# AceleradorCarreiraJd

./: Dockerfile  app.py  pyproject.toml
01-Infra, Linux, Docker/: Docker.md
