[project]
name = "aceleradorcarreirajd"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Lourenço da Silva",email = "gustavolsilva@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.50.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
